--- a/exercise2.html
+++ b/exercise2.html
@@ -35,7 +35,7 @@
         let sub = (num1, num2) => num1 - num2;
         let mult = (num1, num2) => num1 * num2;
         let div = (num1, num2) => {
-            if(num2 == 0){
+            if(num2 === 0){
                 console.log("Cannot Divide by Zero!")
                 return;
             }
@@ -48,7 +48,7 @@
 
         //Callback Functions (use with arrow functions)
         function calculator(num1, num2, callback){
-            callback(num1, num2);
+            return callback(num1, num2);
         }
         console.log(calculator(1, 2, add));
         console.log(calculator(1, 2, mult));
